# armajitto

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindVTune.cmake  VSHelpers.cmake
fuzzer/: interp.cpp  interp.hpp  main.cpp  system.hpp
fuzzer/interp/: arm7tdmi.hpp  arm946es.hpp
fuzzer/interp/arm/: arithmetic.hpp  conditions.hpp  exceptions.hpp  registers.hpp
include/armajitto/: armajitto.hpp  version.hpp
include/armajitto/arm/: mode.hpp  state.hpp
include/armajitto/arm/decoder/: decoder_arm.hpp  decoder_client.hpp  decoder_common.hpp  decoder_instrs.hpp  decoder_thumb.hpp
include/armajitto/backend/x86_64/: cpuid.hpp
include/armajitto/core/: allocator.hpp  context.hpp  layered_memory_map.hpp  location_ref.hpp  memory_map.hpp  memory_params.hpp  options.hpp  params.hpp  pmr_allocator.hpp  recompiler.hpp  specification.hpp  std_allocator.hpp  system_interface.hpp
include/armajitto/core/ir/: emitter.hpp
include/armajitto/core/ir/defs/: arg_refs.hpp  memory_access.hpp
include/armajitto/core/ir/ops/: ir_alu_ops.hpp  ir_branch_ops.hpp  ir_cop_ops.hpp  ir_cycle_ops.hpp  ir_flag_ops.hpp  ir_mem_ops.hpp  ir_ops.hpp  ir_ops_base.hpp  ir_reg_ops.hpp
include/armajitto/defs/: cpu_arch.hpp  cpu_model.hpp  memory_access.hpp
include/armajitto/defs/arm/: exceptions.hpp  flags.hpp  gpr.hpp  instructions.hpp  mode.hpp
include/armajitto/guest/arm/: arithmetic.hpp  cop_register.hpp  coprocessor.hpp  exceptions.hpp  exec_state.hpp  flags.hpp  gpr.hpp  instructions.hpp  mode.hpp  psr.hpp  state.hpp
include/armajitto/guest/arm/coprocessors/: coproc_14_debug_dummy.hpp  coproc_15_sys_control.hpp  coproc_15_sys_ctrl.hpp  coproc_null.hpp
include/armajitto/guest/arm/models/: cpu_model_base.hpp  (+2 more)
include/armajitto/host/: compiler.hpp  host.hpp  host_code.hpp
include/armajitto/host/x86_64/: cpuid.hpp  x86_64_compiled_code.hpp  x86_64_compiler.hpp  x86_64_host.hpp  x86_64_type_traits.hpp
include/armajitto/ir/: basic_block.hpp  emitter.hpp  ir_ops.hpp  location_ref.hpp  optimizer.hpp  translator.hpp  var_lifetime.hpp
include/armajitto/ir/defs/: arg_refs.hpp  arguments.hpp  basic_block.hpp  memory_access.hpp  opcode_types.hpp  variable.hpp
include/armajitto/ir/ops/: ir_alu_ops.hpp  ir_branch_ops.hpp  ir_cop_ops.hpp  ir_cycle_ops.hpp  ir_flag_ops.hpp  ir_mem_ops.hpp  ir_misc_ops.hpp  ir_ops.hpp  ir_ops_base.hpp  ir_ops_visitor.hpp  ir_reg_ops.hpp
include/armajitto/util/: bitmask_enum.hpp  callback.hpp  pointer_cast.hpp  scope_guard.hpp  type_traits.hpp  unsafe_circular_buffer.hpp
packaging/: CMakeLists.txt  armajittoConfig.cmake
src/: test.cpp
src/abi/x86_64/: cpuid.cpp  cpuid.hpp
src/allocator/: arena.hpp
src/arm/: decoder.hpp
src/arm/decoder/: decoder_arm.hpp  decoder_client.hpp  decoder_common.hpp  decoder_instrs.hpp  decoder_thumb.hpp
src/backend/x86_64/: cpuid.cpp
src/core/: allocator.cpp  context.cpp  context.hpp  location_ref.hpp  memory_map.cpp  memory_map_host_access.hpp  memory_map_impl.hpp  memory_map_priv_access.hpp  recompiler.cpp
src/core/ir/: emitter.cpp
src/core/ir/defs/: arg_refs.cpp
src/core/ir/ops/: ir_alu_ops.cpp  ir_branch_ops.cpp  ir_cop_ops.cpp  ir_cycle_ops.cpp  ir_flag_ops.cpp  ir_mem_ops.cpp  ir_reg_ops.cpp
src/guest/arm/: arithmetic.hpp  exception_vectors.hpp  flags.hpp  gpr.cpp  instructions.hpp  mode.cpp  mode_utils.hpp  state.cpp  state_offsets.hpp
src/guest/arm/coprocessors/: coproc_15_sys_control.cpp  cp15_host_access.hpp  cp15_priv_access.hpp
src/guest/arm/models/: cpu_model_arm7tdmi.cpp  cpu_model_arm946es.cpp
src/host/: block_cache.hpp  host.hpp  host_code.hpp  mem_gen_tracker.hpp
src/host/interp/: interp_host.cpp  interp_host.hpp
src/host/x86_64/: abi.hpp  cpuid.cpp  cpuid.hpp  reg_alloc.cpp  reg_alloc.hpp  var_lifetime.cpp  var_lifetime.hpp  vtune.hpp  x86_64_compiled_code.hpp  x86_64_compiler.cpp  x86_64_compiler.hpp  x86_64_flags.hpp  x86_64_host.cpp  x86_64_host.hpp  x86_64_type_traits.hpp
src/ir/: basic_block.cpp  basic_block.hpp  emitter.cpp  emitter.hpp  optimizer.cpp  optimizer.hpp  translator.cpp  translator.hpp  var_lifetime.cpp  var_lifetime.hpp  verifier.hpp
src/ir/defs/: arg_refs.cpp  arguments.cpp  arguments.hpp  opcode_types.hpp  variable.hpp
src/ir/ops/: ir_alu_ops.cpp  ir_branch_ops.cpp  ir_cop_ops.cpp  ir_cycle_ops.cpp  ir_flag_ops.cpp  ir_mem_ops.cpp  ir_ops_base.hpp  ir_ops_visitor.hpp  ir_reg_ops.cpp
src/ir/ops/impl/: ir_alu_ops.hpp  ir_branch_ops.hpp  ir_cop_ops.hpp  ir_flag_ops.hpp  ir_mem_ops.hpp  ir_misc_ops.hpp  ir_reg_ops.hpp
src/ir/optimizer/: arithmetic_ops_coalescence.cpp  arithmetic_ops_coalescence.hpp  basic_bitwise_peephole_opts.cpp  basic_bitwise_peephole_opts.hpp  basic_peephole_opts.cpp  basic_peephole_opts.hpp  bitwise_ops_coalescence.cpp  bitwise_ops_coalescence.hpp  coalesce_bitwise_ops.cpp  coalesce_bitwise_ops.hpp  const_propagation.cpp  const_propagation.hpp  dead_flag_value_store_elimination.cpp  dead_flag_value_store_elimination.hpp  dead_gpr_store_elimination.cpp  dead_gpr_store_elimination.hpp  dead_host_flag_store_elimination.cpp  dead_host_flag_store_elimination.hpp  dead_psr_store_elimination.cpp  dead_psr_store_elimination.hpp  dead_reg_store_elimination.cpp  dead_reg_store_elimination.hpp  dead_store.cpp  dead_store.hpp  dead_store_elimination.cpp  dead_store_elimination.hpp  dead_store_elimination_base.cpp  dead_store_elimination_base.hpp  dead_var_store_elimination.cpp  dead_var_store_elimination.hpp  host_flags_ops_coalescence.cpp  host_flags_ops_coalescence.hpp  identity_ops_elimination.cpp  identity_ops_elimination.hpp  optimizer.cpp  optimizer_pass_base.cpp  optimizer_pass_base.hpp  var_lifetime_opt.cpp  var_lifetime_opt.hpp
src/ir/optimizer/common/: host_flags_tracking.cpp  host_flags_tracking.hpp  var_subst.cpp  var_subst.hpp
src/ir/translator/: decode_arm.hpp  decode_thumb.hpp  translator.cpp
src/util/: bit_ops.hpp  layered_memory_map.hpp  noitree.hpp  pointer_cast.hpp  three_level_array.hpp  two_level_array.hpp  unreachable.hpp  unsafe_circular_buffer.hpp
test/: test.cpp
(+17 files in other folders)
